Closed
Bug 1762393
Opened 4 years ago
Closed 4 years ago
"PresShell.cpp(3322,9): error: use of undeclared identifier 'nsAccessibilityService'" bustage with --disable-accessibility
Categories
(Core :: Layout: Form Controls, defect)
Core
Layout: Form Controls
Tracking
()
RESOLVED
FIXED
100 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr91 | --- | unaffected |
| firefox98 | --- | unaffected |
| firefox99 | --- | unaffected |
| firefox100 | --- | fixed |
People
(Reporter: RyanVM, Assigned: RyanVM)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
In file included from Unified_cpp_layout_base0.cpp:101:
/builds/worker/checkouts/gecko/layout/base/PresShell.cpp(3322,9): error: use of undeclared identifier 'nsAccessibilityService'
if (nsAccessibilityService* accService = GetAccessibilityService()) {
^
/builds/worker/checkouts/gecko/layout/base/PresShell.cpp(3322,33): error: use of undeclared identifier 'accService'
if (nsAccessibilityService* accService = GetAccessibilityService()) {
^
/builds/worker/checkouts/gecko/layout/base/PresShell.cpp(3322,46): error: use of undeclared identifier 'GetAccessibilityService'
if (nsAccessibilityService* accService = GetAccessibilityService()) {
^
/builds/worker/checkouts/gecko/layout/base/PresShell.cpp(3323,7): error: use of undeclared identifier 'accService'
accService->NotifyOfAnchorJumpTo(target);
^
4 errors generated.
| Assignee | ||
Comment 1•4 years ago
|
||
Pushed by rvandermeulen@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/3e3b0f57d4de
Fix --disable-accessibility bustage in PresShell.cpp. r=emilio
Comment 3•4 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 100 Branch
Updated•4 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•