Bug 1762393 - Fix --disable-accessibility bustage in PresShell.cpp. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D142552